--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     <div>
         <canvas class="webgl"></canvas>
     </div>
+    <div class="complete">
+        <h1>
+            Congratulations
+        </h1>
+        <p>You have completed the game, more challanges coming soon...</p>
+        <button class="back">go back</button>
+    </div>
     <div class="score">
         <span class="word">High Score : </span>
         <span class="value">0</span>
@@ -38,4 +45,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type='module' src="./index.js"></script>
 </body>
+
 </html>
