--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
         </a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type='module' src="./index.js"></script>
+    <!-- <script type='module' src="./index.js"></script> -->
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
